--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,8 @@
 
     <section>
         <!-- Met javascript wordt de image-container verplaatst naar een img element -->
-        <img id="image-container" class="placeholder">
+        <img src="images/mijn-foto.jpg" alt="Avatar">
+        <!-- <img  src="assets/mijn-foto.jpg" id="image-container" class="avatar"> -->
         <!-- <img class="loading loading-avatar" src="./images/mijn-foto.jpg" alt="Avatar van de student"> -->
         <h1 id="username" class=" loading-username">Hi keisha,</h1>
         <nav>
@@ -10,4 +11,13 @@
                 <li><a href="/about">About</a></li>
             </ul>
         </nav>
+    </section>
+
+    <section>
+        <section>
+            <h2 id="text-title" class="loading-app-name">Design<span>Quotes</span></h2>
+        
+            <ul></ul>
+        
+        </section>
     </section>
