content van aboutpagina toegevoegd

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,6 +10,19 @@
 
         <main>
             <h1>About Pagina</h1>
+
+            <section id="about">
+
+                <article>
+                    <h2>Over Design quotes</h2>
+                    <p>Design quotes is a single page application where students can view quotes from different design
+                        principles to
+                        gain inspiration for their projects.</p>
+
+                    <p> Design Quotes is made by Keisha Alexander </p>
+                </article>
+
+            </section>
         </main>
     </body>
 
