--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,8 +8,10 @@
             <%- include("./partials/nav");%>
         </header>
 
+
+        <%-include("./partials/page-title")%>
         <main>
-            <h1>About Pagina</h1>
+           
 
             <section id="about">
 
