Oude code weggehaald

--- a/views/quotes.ejs
+++ b/views/quotes.ejs
@@ -9,7 +9,7 @@
             <%- include("./partials/nav");%>
         </header>
 
-        <h3>Quotes</h3>
+      <%-include("./partials/page-title")%>
         <!-- De tags menu en de searchbar -->
         <%- include("./partials/filter") %>
 
