--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,25 +8,16 @@
         <%- include("./partials/nav");%>
     </header>
 
-    <h3>Quotes</h3>
+    <!-- Hier staat de pagina titel -->
+    <%-include("./partials/page-title")%>
     <!-- De tags menu en de searchbar -->
-    <%- include("./partials/filter") %>
+    
 
     <main>
         <section id="content">
             <article>
                 <section>
-                    <q>${item.quote}</q>
-            
-                    <p class="author">${item.author}</p>
-                </section>
-                <section>
-                    <img src="${item.avatar}" alt="Avatar">
-                    <p>${item.bio}</p>
-                </section>
-                <ul>
-                    <li>${item.tags}</li>
-                </ul>
+                <a href="/quotes"> Click here to see the quotes</a>
             </article>
         </section>
     </main>
