--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,5 +15,5 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     
     <!-- Bron: https://fonts.google.com/icons -->
-    <title>Design quotes app</title>
+    <title><%- title%></title>
 </head>
