--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,7 +279,7 @@ main ul li {
 }
 
 /*****************************/
-/* CONTENT BINNEN DE ARTICLE */
+/* Quotes pagina*/
 /*****************************/
 #content article q {
     color: var(--donker-blauw);
