een intro toegvoegd

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,11 @@
     
 
     <main>
-        <section id="content">
+        <section id="home">
             <article>
-                <section>
+                <h2>Welcome to Design quotes</h2>
+                <p>An app with quotes from different pupular developers and designers in the world of the web.</p>
+                
                 <a href="/quotes"> Click here to see the quotes</a>
             </article>
         </section>
