--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./partials/head");%>
+<%- include("./partials/head.ejs");%>
 
     <body>
 
         <header>
-            <%- include("./partials/nav");%>
+            <%- include("./partials/nav.ejs");%>
         </header>
 
 
-        <%-include("./partials/page-title")%>
+        <%-include("./partials/page-title.ejs")%>
         <main>
            
 
