--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./partials/head");%>
+<%- include("./partials/head.ejs");%>
 <body>
     
     <header>
         <!-- De navigatie menu -->
-        <%- include("./partials/nav");%>
+        <%- include("./partials/nav.ejs");%>
     </header>
 
     <!-- Hier staat de pagina titel -->
-    <%-include("./partials/page-title")%>
+    <%-include("./partials/page-title.ejs")%>
     <!-- De tags menu en de searchbar -->
     
 
