in template gerenderd

--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -18,8 +18,8 @@
                 <section>
                     <article>
                         <section>
-                            <p><%-quoteData%></p>
-                            <q></q>
+                            <p></p>
+                            <q><%= quoteData.quote %></q>
                          
                           
                         </section>
