--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include("./partials/head.ejs");%>
-<body>
+<body class="homepagina">
     
     <header>
         <!-- De navigatie menu -->
@@ -13,11 +13,11 @@
     <!-- De tags menu en de searchbar -->
     
 
-    <main>
+    <main class="main-van-home">
         <section id="home">
             <article>
                 <h2>Welcome to Design quotes</h2>
-                <p>An app with quotes from different pupular developers and designers in the world of the web.</p>
+                <p>An app with quotes from different popular developers and designers in the world of the web.</p>
                 
                 <a href="/quotes"> Click here to see the quotes</a>
             </article>
