--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,7 @@ body {
     /* height: 100vh; */
 
 }
+
 /* Body van de homepagina */
 body.homepagina {
     margin: 0 1em;
@@ -114,7 +115,7 @@ header section:nth-of-type(1) h1 {
 }
 
 #image-container {
-   
+
     width: 3em;
     height: 3em;
     aspect-ratio: 1;
@@ -291,7 +292,7 @@ main #home article {
     padding: 2em;
     border-radius: 3em;
     position: relative;
-    
+
 }
 
 
@@ -316,10 +317,11 @@ main #home article {
     position: absolute;
     bottom: 1em;
     padding: 1em 1.5em;
-   left: 13%;
-   border-radius: 3em;
-   font-family: var(--algemene-text);
+    left: 13%;
+    border-radius: 3em;
+    font-family: var(--algemene-text);
 }
+
 /*****************************/
 /* Quotes pagina*/
 /*****************************/
@@ -371,6 +373,57 @@ main #home article {
     color: var(--donker-groen)
 }
 
+/****************/
+/* DETAILPAGINA */
+/****************/
+#detailpagina {
+    margin: 0 1em;
+}
+
+#detailpagina>a {
+    font-family: var(--algemene-text);
+    display: inline-block;
+    width: fit-content;
+    background-color: var(--grijs);
+    padding: .5em 1em;
+    border-radius: 3em;
+}
+
+#detailpagina main {
+    /* width: 100%; */
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+}
+
+#detailpagina article {
+    padding: 1.5em;
+    background-color: var(--grijs);
+    border-radius: 3em;
+}
+
+#detailpagina article img {
+    block-size: 3em;
+    aspect-ratio: 1;
+}
+
+#detailpagina article p {
+    font-family: var(--paragraaf);
+}
+
+#detailpagina article q {
+    display: inline-block;
+    text-align: center;
+    padding: 2em 0;
+    font-size: 1.5em;
+    color: var(--donker-blauw);
+}
+
+#detailpagina article section:nth-of-type(1) {
+    display: flex;
+    gap: 1em;
+}
 
 /*****************/
 /* LOADING STATE */
@@ -501,6 +554,10 @@ body>figure img {
 
     #home a {
         left: 20%;
+    }
+
+    #detailpagina article {
+        max-width: 25em;
     }
 }
 
