Filtreren functie werkt

--- a/views/quotes.ejs
+++ b/views/quotes.ejs
@@ -35,6 +35,8 @@
                    
                 </section>
             </main>
+
+            <%-include('./partials/script-tag')  %>
     </body>
 
 </html>
