--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,6 +13,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+        <link rel="manifest" href="/manifest.json">
     
     <!-- Bron: https://fonts.google.com/icons -->
     <title><%-title%></title>
