--- a/views/quotes.ejs
+++ b/views/quotes.ejs
@@ -36,6 +36,7 @@
                    
                 </section>
             </main>
+            <%-include("./partials/footer.ejs") %>
 
     </body>
 
