theme color toegvoegd

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -14,7 +14,9 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-        <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#75B6A2">
+        <!-- <meta name="description" content="Design quotes for Students"> -->
     
     <!-- Bron: https://fonts.google.com/icons -->
     <title><%-title%></title>
