offline fallbck page

--- a/views/offline.ejs
+++ b/views/offline.ejs
@@ -4,8 +4,12 @@
 
 
     <body>
-        <h1>Your offline</h1>
 
+        <main>
+            <h1>OOPS! Your offline</h1>
+            <p>You currently are offline unfortunately.</p>
+            <a href="/">Go to Homepage</a>
+        </main>
 
 
     </body>
