Offline-pagina gestijld

--- a/views/offline.ejs
+++ b/views/offline.ejs
@@ -3,7 +3,7 @@
 <%- include("./partials/head.ejs");%>
 
 
-    <body>
+    <body id="offline-pagina">
 
         <main>
             <h1>OOPS! Your offline</h1>
@@ -11,7 +11,7 @@
             <a href="/">Go to Homepage</a>
         </main>
 
-
+    <%-include("./partials/footer.ejs") %>
     </body>
 
 </html>
