width van alle afbeelding

--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -19,7 +19,7 @@
                 <article>
                     <section>
                         
-                        <img src="<%=quoteData.avatar%>" alt="Een foto van de auteur">
+                        <img width="100" src="<%=quoteData.avatar%>" alt="Een foto van de auteur">
 
                         <div class="wrapper">
                             <h2>
