--- a/views/quotes.ejs
+++ b/views/quotes.ejs
@@ -24,7 +24,7 @@
                             <p class="author"><%-item.author%></p>
                         </section>
                         <section>
-                            <img src="<%-item.avatar%>" alt="Avatar">
+                            <img width="100" src="<%-item.avatar%>" alt="Avatar">
                             <p><%-item.bio%></p>
                         </section>
                         <ul>
