--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <meta name="description" content="Design quotes">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=Gloock&family=Inter:wght@300;400;700&family=Josefin+Sans:wght@300;400;500;700&display=swap"
