li toevoegen bij de unordered list

--- a/views/quotes.ejs
+++ b/views/quotes.ejs
@@ -28,7 +28,7 @@
                             <p><%-item.bio%></p>
                         </section>
                         <ul>
-                            <a href="/quotes/<%-item.id%>">Quote</a>
+                            <li><a href="/quotes/<%-item.id%>">Quote</a></li>
                             <li><%-item.tags%></li>
                         </ul>
                     </article> 
