--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,9 +7,9 @@
     <noscript><link rel="preload" href="/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"></noscript>
     <link rel="stylesheet" href="/css/style.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <!-- <link
-        href="https://fonts.googleapis.com/css2?family=Gloock&family=Inter:wght@300;400;700&family=Josefin+Sans:wght@300;400;500;700&display=swap"
-        rel="stylesheet"> -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
     <!-- Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0" />
