--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link
-        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Gloock&family=Inter:wght@300;400;700&family=Josefin+Sans:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <!-- Icons -->
     <link rel="stylesheet"
