--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -19,7 +19,7 @@
                 <article>
                     <section>
                         
-                        <img width="100%" height="100%" src="<%=quoteData.avatar%>" alt="Een foto van de auteur">
+                        <img loading="lazy" width="100" height="100" src="<%=quoteData.avatar%>" alt="Een foto van de auteur">
 
                         <div class="wrapper">
                             <h2>
