kleinere foto gezet

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 
     <section>
         <!-- Met javascript wordt de image-container verplaatst naar een img element -->
-        <img src="/images/mijn-foto.jpg" alt="Avatar">
+        <img src="/images/me.jpg" alt="Avatar">
         <!-- <img  src="assets/mijn-foto.jpg" id="image-container" class="avatar"> -->
         <!-- <img class="loading loading-avatar" src="./images/mijn-foto.jpg" alt="Avatar van de student"> -->
         <h1 id="username" class=" loading-username">Hi keisha,</h1>
